# Qt_DummyLibrary_Example

./: .gitignore  README.md
source/: CMakeLists.txt
source/dummy_app/: CMakeLists.txt  Dummy.hpp  main.cpp
source/dummy_lib/: CMakeLists.txt  DummyLib.cpp  DummyLib.hpp  DummyLibStatic.cpp
source/dummy_static/: CMakeLists.txt  DummyStatic.cpp  DummyStatic.hpp
